# csi-nn2

./: CMakeLists.txt  Dockerfile  Makefile
cmake/: rules.cmake
example/: Makefile  c920_conv2d_f32.c  conv2d_f32.c  ref_conv2d_f32.c  rvv_conv2d_f32.c
source/thead_rvv/: reorder.c
source/thead_rvv/fp32/: fullyconnected_fp32.c  gemm_fp32_a0b1.c
